Viewing value passes in render view displays the value as alpha #85895

Closed
opened 2021-02-22 18:52:57 +01:00 by James Horsley · 7 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce RTX 3080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.79

Blender Version
Broken: version: 2.92.0 Release Candidate, branch: master, commit date: 2021-02-19 06:58, hash: 241273d362
Worked: (newest version of Blender that worked as expected)

Short description of error
When you render a pass that is a single value (eg. Mist, Z, value AOV...) when you switch to in in the passes dropdown, the value is interpreted as alpha in the viewer.
The display channels dropdown updates to colour only but does not properly update the viewer. Re-selecting the option fixes it.
image.png

Exact steps for others to reproduce the error
In the default scene, enable the Mist pass.
Render the image and change the viewer to the mist pass and the cube will show as transparent.
image.png

2021-02-22 17-51-01.mp4

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce RTX 3080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.79 **Blender Version** Broken: version: 2.92.0 Release Candidate, branch: master, commit date: 2021-02-19 06:58, hash: `241273d362` Worked: (newest version of Blender that worked as expected) **Short description of error** When you render a pass that is a single value (eg. Mist, Z, value AOV...) when you switch to in in the passes dropdown, the value is interpreted as alpha in the viewer. The display channels dropdown updates to colour only but does not properly update the viewer. Re-selecting the option fixes it. ![image.png](https://archive.blender.org/developer/F9828021/image.png) **Exact steps for others to reproduce the error** In the default scene, enable the Mist pass. Render the image and change the viewer to the mist pass and the cube will show as transparent. ![image.png](https://archive.blender.org/developer/F9828032/image.png) [2021-02-22 17-51-01.mp4](https://archive.blender.org/developer/F9828037/2021-02-22_17-51-01.mp4)
Author

Added subscriber: @mmdanggg2

Added subscriber: @mmdanggg2
James Horsley changed title from Viewing float passes in render view displays the value as alpha to Viewing value passes in render view displays the value as alpha 2021-02-22 18:53:20 +01:00
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm.

#74586 (Switching between passes in the image editor can make the channel selector invalid.) seems related
6a5bd812b5 seems related.

Can confirm. #74586 (Switching between passes in the image editor can make the channel selector invalid.) seems related 6a5bd812b5 seems related.
Philipp Oeser self-assigned this 2021-02-23 11:27:08 +01:00

This issue was referenced by b123aadeee

This issue was referenced by b123aadeeebe20317183c7c9d833caee1eb7e59b
Member

There was a similar report prior to the introduction of the Image Engine, see #74586.
This was fixed by 6a5bd812b5 at that time, but got lost in the refactor it seems.

Above commit introduced the ED_space_image_get_display_channel_mask function that will determine
the valid bitflags for the display channel of a given ImBuf.

But since the refactor, this is not called anymore (draw_image_main is not called anymore)
Now it seems we can safely reuse that said function ED_space_image_get_display_channel_mask also for the Image Engine.

There was a similar report prior to the introduction of the Image Engine, see #74586. This was fixed by 6a5bd812b5 at that time, but got lost in the refactor it seems. Above commit introduced the `ED_space_image_get_display_channel_mask` function that will determine the valid bitflags for the display channel of a given ImBuf. But since the refactor, this is not called anymore (`draw_image_main` is not called anymore) Now it seems we can safely reuse that said function `ED_space_image_get_display_channel_mask` also for the Image Engine.
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#85895
No description provided.